Modify Services on Client

--- a/client/src/app/admin-portal/admin-portal.component.html
+++ b/client/src/app/admin-portal/admin-portal.component.html
@@ -1,7 +1,7 @@
 <div class="column row">
         <hr>
         <ul class="tabs" data-tabs id="example-tabs">
-            <li class="tabs-title is-active"><a routerLinkActive="active" routerLink="/portal/video-management" aria-selected="true">Videos</a></li>
+            <li class="tabs-title"><a routerLinkActive="active" routerLink="/portal/video-management" aria-selected="true">Videos</a></li>
             <li class="tabs-title"><a routerLinkActive="active" routerLink="/portal/user-management">Users</a></li>
         </ul>
         <div class="tabs-content" data-tabs-content="example-tabs">
